all requirements done, also leaderboard and easter egg implemented

--- a/Web/Components/Pages/Game.razor
+++ b/Web/Components/Pages/Game.razor
@@ -9,7 +9,7 @@
     {
         <div class="alert alert-danger">
             <p>The session is invalid or has ended. Please return to the lobby.</p>
-            <a href="/lobby" class="btn-primary">Return to Lobby</a>
+            <a href="/" class="btn-primary">Return to Lobby</a>
         </div>
     }
     else
